# hsh-alfa

./: .env.example  .gitignore  ACTION_ITEMS.md  CODE_REVIEW.md  CONTRIBUTING.md  GITHUB_RELEASE_NOTES.md  README.md  TESTING.md  WORKLOG.md  docker-compose.ci.yml  docker-compose.yml
backend/: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  constants.py  exceptions.py  logging_config.py  main.py
backend/app/api/: __init__.py  admin.py  ai_tools.py  auth.py  bookmarks.py  dependencies.py  export_import.py  habits.py  notes.py  preferences.py  sections.py  widgets.py
backend/app/config/: bookmarks.json  widgets.yaml
backend/app/migrations/: add_clicks_to_bookmarks.py  add_model_to_ai_tools.py  add_performance_indexes.py  add_role_to_users.py  add_tree_structure_to_notes.py  add_user_id_to_tables.py  create_ai_tools_table.py  create_habits_tables.py  create_notes_table.py  create_preferences_table.py  create_users_table.py
backend/app/models/: __init__.py  ai_tool.py  bookmark.py  habit.py  note.py  preference.py  section.py  user.py  widget.py  widget_configs.py
backend/app/scripts/: migrate_widgets_to_db.py
backend/app/services/: ai_tool_service.py  auth_service.py  bookmark_service.py  cache.py  database.py  export_import_service.py  favicon.py  http_client.py  note_service.py  preference_service.py  rate_limit.py  scheduler.py  section_service.py  user_initialization_service.py  widget_registry.py
backend/app/utils/: logging.py
backend/app/widgets/: __init__.py  base_widget.py  (+5 more)
backend/tests/: __init__.py  conftest.py  test_bookmark_validation.py
(+102 files in other folders)
